k8s/price-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-service-deployment
  namespace: stage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: price-service
  template:
    metadata:
      labels:
        app: price-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: price-service
          image: ghcr.io/shreeraamg/microservices/price-service:0.0.3
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
