k8s/product-service-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: product-service-pod
spec:
  imagePullSecrets:
    - name: ghcr-secret
  containers:
    - name: product-service
      image: ghcr.io/shreeraamg/microservices/product-service:0.0.1
      ports:
        - containerPort: 8082
