k8s/location-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: location-service-svc
  namespace: stage
spec:
  selector:
    app: location-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8070
  type: ClusterIP
