k8s/price-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: price-service-svc
  namespace: stage
spec:
  selector:
    app: price-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
