k8s/product-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service-svc
  namespace: stage
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
  type: ClusterIP
