k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: stage
spec:
  ingressClassName: nginx
  rules:
    - host: stage.digitallly.in
      http:
        paths:
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: product-service-svc
                port:
                  number: 80

          - path: /api/prices
            pathType: Prefix
            backend:
              service:
                name: price-service-svc
                port:
                  number: 80

          - path: /api/locations
            pathType: Prefix
            backend:
              service:
                name: location-service-svc
                port:
                  number: 80
